# Tap30pp

./: CMakeLists.txt  README.md  resources.qrc
qml/: App.qml  HomePage.qml  Main.qml  Splash.qml
qml/components/: ImageButton.qml  RoundedImage.qml  ServiceItem.qml
src/: main.cpp
